adding styles and script folder

--- a/templates/Technical_skill.html
+++ b/templates/Technical_skill.html
@@ -11,7 +11,7 @@
         <li>MySQL , PostgreSQL  </li>
         <li>Pandas, Matplotlib, and Seaborn for data analysis and visualization </li>
         <li>NumPy, Scikit Learn, Tensorflow,Keras, Gensim,NTLK </li>
-        <li>Excel, Power BI </li>
+        <li>Excel </li>
     </ul>
     
 </body>
